# LexCorpus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.train  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.vllm.yml  docker-compose.yml  pyproject.toml  temp_eureka_api_probe.py  temp_eureka_api_probe10.py  temp_eureka_api_probe11.py  temp_eureka_api_probe12.py  temp_eureka_api_probe13.py  temp_eureka_api_probe14.py  temp_eureka_api_probe2.py  temp_eureka_api_probe3.py  temp_eureka_api_probe4.py  temp_eureka_api_probe5.py  temp_eureka_api_probe6.py  temp_eureka_api_probe7.py  temp_eureka_api_probe8.py  temp_eureka_api_probe9.py  temp_eureka_debug.py  temp_eureka_network.py  temp_eureka_network2.py  temp_eureka_network3.py  temp_eureka_probe.py  temp_eureka_probe2.py  temp_eureka_probe3.py  temp_eureka_probe4.py  temp_sip_probe.py
api/: dependencies.py  llm_providers.py  logging_config.py  main.py  rate_limit.py  result_cache.py  schemas.py  sync.py  tasks.py
data/: eval_questions.jsonl  eval_results.json  eval_results_10k.json
frontend/: .env.local.example  .gitignore  Dockerfile  entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts  tailwind.config.ts
nginx/: nginx.conf
notebooks/: exploration.ipynb
rag/: adaptive_rag.py  agent.py  colbert_retriever.py  crag.py  ingest.py  legal_graph.py  ner.py  raptor.py  retriever.py  sat_graph.py
scripts/: backup.sh  build_dataset.py  build_eval_benchmark.py  classify_eurovoc.py  detect_changes.py  enrich_ner.py  evaluate.py  export_feedback.py  fetch_eurlex.py  fetch_isap.py  fetch_juddges.py  fetch_kis.py  fetch_saos.py  generate_contextual_chunks.py  generate_training_data.py  ingest_private.py  ingest_sample.py  preprocess.py  quantize_bielik.py  run_eval.py  train_ner.py
(+127 files in other folders)
